--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,7 @@ no_match_path = "*/integration/*"
 fuzz_runs = 10000
 ffi = true
 fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
+evm_version = "istanbul"
 
 [profile.integration]
 no_match_path = ""
